--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -69,10 +69,19 @@ header li a:hover {
   overflow: hidden;
   box-sizing: border-box;
 }
-.product img {
+
+.image-wrapper {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.product img {
   position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .product .info {
   background-color: rgba(0,0,0,0.8);
@@ -90,18 +99,29 @@ header li a:hover {
   padding: 10px;
 }
 
-#total {
-  border-bottom: 1px solid #333;
+.arrow-wrapper-right, .arrow-wrapper-left {
+  position: fixed;
+  height: 100vh;
+  color: #000;
+  z-index: 2;
+  font-size: 90px;
+  top: 0;
+  width: 100px;
 }
 
-.item-pick {
-  margin-bottom: 50px;
+.arrow-wrapper-left {
+  left: 0;
+  background-image: linear-gradient(to right,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
 }
 
-#edit-table {
-  display: none;
+.arrow-wrapper-right {
+  right: 0;
+  background-image: linear-gradient(to left,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
 }
 
-#edit-submit {
-  display: none;
+.glyphicon-chevron-left, .glyphicon-chevron-right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-shadow: 2px 2px #fff, -2px 2px #fff;
 }
