add product details

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,9 +1,9 @@
-<!-- <div class="arrow-wrapper-left" (click)="previousPage()">
+<div class="arrow-wrapper-left" (click)="previousPage()">
   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 </div>
 <div class="arrow-wrapper-right" (click)="nextPage()">
   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-</div> -->
+</div>
 <div class="products row">
   <div class="product col-lg-4" *ngFor="let product of products" (click)="goToDetail(product)">
     <div class="image-wrapper">
