--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -91,3 +91,26 @@ td {
   bottom: 15px;
   height: 10px;
 }
+
+#email-form {
+  margin-top: 50px;
+}
+
+#email-form .input-field {
+  position: relative;
+}
+
+#email-form input{
+  min-width: 300px;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid #000;
+  font-family: inherit;
+  position: relative;
+  background: transparent;
+  font-size: 24px;
+}
+
+#email-confirmation {
+  display: none;
+}
