--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,6 +1,13 @@
 <div class="row">
   <div class="col-lg-6 product-image-wrapper">
     <img class="product-image img-responsive" src="{{(product)?.image}}" alt="">
+    <form id="email-form" class="form-inline">
+      <div class="input-field">
+        <input name="email" type="email" [value]="email" (input)="email = $event.target.value" placeholder="Send To Email">
+        <button (click)="sendEmail(email)" class="btn btn-info btn-lg">Submit</button>
+      </div>
+    </form>
+    <p id="email-confirmation">Thank you! Your email has been sent.</p>
   </div>
   <div class="col-lg-6 product-info">
     <h1>{{(product)?.name}}</h1>
