--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -101,27 +101,24 @@ header li a:hover {
 
 .arrow-wrapper-right, .arrow-wrapper-left {
   position: fixed;
-  height: 100vh;
   color: #000;
   z-index: 2;
   font-size: 90px;
-  top: 0;
-  width: 100px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .arrow-wrapper-left {
   left: 0;
-  background-image: linear-gradient(to right,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
 }
 
 .arrow-wrapper-right {
   right: 0;
-  background-image: linear-gradient(to left,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
 }
 
 .glyphicon-chevron-left, .glyphicon-chevron-right {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-shadow: 2px 2px #fff, -2px 2px #fff;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 100%;
+  border: 5px solid #000;
 }
