--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
     <li routerLink="seating" routerLinkActive="active">
       <p>Seating</p>
     </li>
+    <li routerLink="youth" routerLinkActive="active">
+      <p>Youth</p>
+    </li>
   </ul>
 </header>
 <div style="padding: 30px">
