--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -9,7 +9,7 @@
     <div class="image-wrapper">
       <img src="{{product['image']}}" alt="" class="product-image">
       <div class="info">
-        <p>{{product["name"]}}</p>
+        <p>{{product["number"]}}</p>
       </div>
     </div>
   </div>
