--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 header {
-  height: 70px;
+  height: 100px;
   background-color: #333;
   position: relative;
   margin-bottom: 20px;
@@ -53,4 +53,11 @@ header .glyphicon-arrow-left {
 
 .glyphicon-arrow-left:hover {
   color: #ddd;
+}
+
+img {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100px;
 }
