--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <span (click)="goBack()" class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
   <!-- <img src="http://www.tuckerfurnitureinc.com/uploads/brand/images/dc4079d46c69bea6eb8ded10520c3e0c71b4946f.jpg" class="img-responsive" alt=""> -->
-  <h1 class="text-center">Homelegance Furniture</h1>
+  <h1>Homelegance Furniture</h1>
   <ul style="list-style: none">
     <li routerLink="dining" routerLinkActive="active">
       <p>Dining</p>
@@ -14,6 +14,12 @@
     </li>
     <li routerLink="youth" routerLinkActive="active">
       <p>Youth</p>
+    </li>
+    <li routerLink="occasional" routerLinkActive="active">
+      <p>Occasional</p>
+    </li>
+    <li routerLink="home" routerLinkActive="active">
+      <p>Home</p>
     </li>
   </ul>
 </header>
