--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,48 @@
-<p>
-  home works!
-</p>
+<div class="col-lg-4 product" routerLink="dining" routerLinkActive="active">
+  <div class="image-wrapper">
+    <img src="{{dining}}">
+    <div class="info">
+      <p>Dining</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 product" routerLink="occasional" routerLinkActive="active">
+  <div class="image-wrapper">
+    <img src="{{occasional}}">
+    <div class="info">
+      <p>Occasional</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 product" routerLink="home" routerLinkActive="active">
+  <div class="image-wrapper">
+    <img src="{{home}}">
+    <div class="info">
+      <p>Home</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 product" routerLink="bedroom" routerLinkActive="active">
+  <div class="image-wrapper">
+    <img src="{{bedroom}}">
+    <div class="info">
+      <p>Bedroom</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 product" routerLink="seating" routerLinkActive="active">
+  <div class="image-wrapper">
+    <img src="{{seating}}">
+    <div class="info">
+      <p>Seating</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 product" routerLink="youth" routerLinkActive="active">
+  <div class="image-wrapper">
+    <img src="{{youth}}">
+    <div class="info">
+      <p>Youth</p>
+    </div>
+  </div>
+</div>
