--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -10,7 +10,7 @@ header {
   height: 70px;
   background-color: #333;
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 header  h1 {
     margin: 0;
@@ -47,6 +47,10 @@ header li a:hover {
   color: #ddd;
 }
 
+.pagination {
+  margin: 0;
+}
+
 .pagination > .active > a {
   color: #fff;
   background-color: #333;
@@ -64,8 +68,7 @@ header li a:hover {
 .product {
   position: relative;
   margin-bottom: 20px;
-  max-height: 300px;
-  height: 300px;
+  height: 33vh;
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -82,7 +85,7 @@ header li a:hover {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  zoom: 80%;
+  width: 100%;
 }
 .product .info {
   background-color: rgba(0,0,0,0.8);
