add paragraph tag to show cookie and user

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <div class="col-md-4 col-md-offset-4">
   <p id="error" style="display: none;">The username or password was not correct</p>
+  <p>cookie: {{cookie}}</p>
+  <p>user: {{user}}</p>
   <form>
     <div class="form-group">
       <label for="email">Email Address</label>
