added subcategories and search

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   font-family: 'Raleway', sans-serif;
 }
 
@@ -121,4 +121,4 @@ header li a:hover {
   padding: 20px;
   border-radius: 100%;
   border: 5px solid #000;
-}
+}*/
