--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,4 @@
-<header>
-  <span (click)="goBack()" class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
-  <!-- <img src="http://www.tuckerfurnitureinc.com/uploads/brand/images/dc4079d46c69bea6eb8ded10520c3e0c71b4946f.jpg" class="img-responsive" alt=""> -->
-  <h1 routerLink="/" routerLinkActive="active">Homelegance Furniture</h1>
-  <ul style="list-style: none">
-    <li routerLink="dining" routerLinkActive="active">
-      <p>Dining</p>
-    </li>
-    <li routerLink="bedroom" routerLinkActive="active">
-      <p>Bedroom</p>
-    </li>
-    <li routerLink="seating" routerLinkActive="active">
-      <p>Seating</p>
-    </li>
-    <li routerLink="youth" routerLinkActive="active">
-      <p>Youth</p>
-    </li>
-    <li routerLink="occasional" routerLinkActive="active">
-      <p>Occasional</p>
-    </li>
-    <li routerLink="home" routerLinkActive="active">
-      <p>Home</p>
-    </li>
-  </ul>
-</header>
+<app-navbar></app-navbar>
 <div style="padding: 10px">
   <router-outlet></router-outlet>
 </div>
