--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+
   <div class="col-lg-6 product-image-wrapper">
     <img *ngIf="!multipleImages()" src="{{images[0]}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
     <div *ngIf="multipleImages()" id="carousel-example-generic" class="carousel slide" data-interval="0">
@@ -46,8 +46,8 @@
         <tr *ngFor="let item of productItems">
           <td>{{item.description}}</td>
           <td>{{item.dimensions}}</td>
-          <td>{{item.price | currency:'USD':true}}</td>
-          <td class="input-field">
+          <td *ngIf="item.price">{{item.price | currency:'USD':true}}</td>
+          <td *ngIf="item.price" class="input-field">
             <li class="active" (click)="dropDown($event)">{{item.numberSelected}}</li>
             <ul>
               <li value="0" (click)="selectNumber($event, item)">0</li>
@@ -68,14 +68,13 @@
     </div>
   </div>
   <div class="clearfix"></div>
-</div>
-<div class="related-products">
-      <div class="col-md-3 product">
-        <div class="image" style="background: url(<%= product.image %>); background-size: cover; background-position: center center;"></div>
-        <div class="info">
-        </div>
-      </div>
-</div>
+<!-- <div class="related-products">
+  <div class="col-md-3 product">
+    <div class="image" style="background: url(<%= product.image %>); background-size: cover; background-position: center center;"></div>
+    <div class="info">
+    </div>
+  </div>
+</div> -->
 
 <div id="imageModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
