fix for mobile and finish sub-categories

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-4 product" routerLink="sub-categories/dining" routerLinkActive="active">
+<div class="col-xs-4 product" routerLink="sub-categories/dining" routerLinkActive="active">
   <div class="image-wrapper">
     <img src="{{dining}}">
     <div class="info">
@@ -6,7 +6,7 @@
     </div>
   </div>
 </div>
-<div class="col-lg-4 product" routerLink="sub-categories/occasional" routerLinkActive="active">
+<div class="col-xs-4 product" routerLink="occasional" routerLinkActive="active">
   <div class="image-wrapper">
     <img src="{{occasional}}">
     <div class="info">
@@ -14,7 +14,7 @@
     </div>
   </div>
 </div>
-<div class="col-lg-4 product" routerLink="sub-categories/home" routerLinkActive="active">
+<div class="col-xs-4 product" routerLink="sub-categories/home" routerLinkActive="active">
   <div class="image-wrapper">
     <img src="{{home}}">
     <div class="info">
@@ -22,7 +22,7 @@
     </div>
   </div>
 </div>
-<div class="col-lg-4 product" routerLink="sub-categories/bedroom" routerLinkActive="active">
+<div class="col-xs-4 product" routerLink="sub-categories/bedroom" routerLinkActive="active">
   <div class="image-wrapper">
     <img src="{{bedroom}}">
     <div class="info">
@@ -30,7 +30,7 @@
     </div>
   </div>
 </div>
-<div class="col-lg-4 product" routerLink="sub-categories/seating" routerLinkActive="active">
+<div class="col-xs-4 product" routerLink="sub-categories/seating" routerLinkActive="active">
   <div class="image-wrapper">
     <img src="{{seating}}">
     <div class="info">
@@ -38,7 +38,7 @@
     </div>
   </div>
 </div>
-<div class="col-lg-4 product" routerLink="sub-categories/youth" routerLinkActive="active">
+<div class="col-xs-4 product" routerLink="sub-categories/youth" routerLinkActive="active">
   <div class="image-wrapper">
     <img src="{{youth}}">
     <div class="info">
