--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="col-xs-4 col-xs-offset-4">
   <p id="error" style="display: none;">The username or password was not correct</p>
   <form>
     <div class="form-group">
