--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,13 +17,14 @@
   </div>
   <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li *ngFor="let category of generateArray(navSubCategories)" class="dropdown">
+      <li *ngFor="let category of generateArray(navSubCategories)">
         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{category[0] | titlecase}}<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li (click)="closeNav()" routerLink="{{category[0]}}"><a>All</a></li>
           <li (click)="closeNav()" (click)="goTo(sub['name'])" *ngFor="let sub of category[1]"><a>{{sub["name"]}}</a></li>
         </ul>
       </li>
+      <li (click)="closeNav()" routerLink="occasional"><a>Occasional</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
   <ul style="list-style: none;display: none;">
