add loading screen

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -16,6 +16,8 @@ header  h1 {
   display: table-cell;
   vertical-align: middle;
   font-size: 45px;
+  position: relative;
+  top: 5px;
   }
 header ul {
   position: absolute;
