--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,7 @@
-<div class="col-xs-4 product" routerLink="sub-categories/dining" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{dining}}">
-    <div class="info">
-      <p>Dining</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="occasional" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{occasional}}">
-    <div class="info">
-      <p>Occasional</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="sub-categories/home" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{home}}">
-    <div class="info">
-      <p>Home</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="sub-categories/bedroom" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{bedroom}}">
-    <div class="info">
-      <p>Bedroom</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="sub-categories/seating" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{seating}}">
-    <div class="info">
-      <p>Seating</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="sub-categories/youth" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{youth}}">
-    <div class="info">
-      <p>Youth</p>
-    </div>
-  </div>
-</div>
+<a routerLink="/categories">
+  <div class="splash"></div>
+  <h1 class="welcome">Welcome to Homelegance</h1>
+  <h3 class="touch">Touch to begin</h3>
+  <!-- <h1 class="logo">Homelegance</h1> -->
+  <img src="https://cdn3.bigcommerce.com/s-rpzf45a/product_images/uploaded_images/homelegance-logo.jpg?t=1446963648" alt="" class="logo">
+</a>
