--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
   <span (click)="goBack()" class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
-  <h1 routerLink="/" routerLinkActive="active">Homelegance Furniture</h1>
+  <h1 routerLink="/categories" routerLinkActive="active">Homelegance Furniture</h1>
   <div class="nav-right">
     <app-search class="search"></app-search>
     <div class="categories text-center">
