--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: 'Raleway', sans-serif !important;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
