--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,48 +1,81 @@
-<div class="col-xs-4 product" routerLink="/sub-categories/dining" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{dining}}">
-    <div class="info">
-      <p>Dining</p>
+<div id="category_carousel" class="carousel slide products" data-ride="carousel" data-interval="false">
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active" id="page1">
+      <div class="products clearfix">
+        <div class="col-xs-4 product" routerLink="/sub-categories/dining" routerLinkActive="active">
+          <div class="image-wrapper">
+            <img src="{{dining}}">
+            <div class="info">
+              <p>Dining</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4 product" routerLink="/occasional" routerLinkActive="active">
+          <div class="image-wrapper">
+            <img src="{{occasional}}">
+            <div class="info">
+              <p>Occasional</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4 product" routerLink="/sub-categories/home" routerLinkActive="active">
+          <div class="image-wrapper">
+            <img src="{{home}}">
+            <div class="info">
+              <p>Home</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4 product" routerLink="/sub-categories/bedroom" routerLinkActive="active">
+          <div class="image-wrapper">
+            <img src="{{bedroom}}">
+            <div class="info">
+              <p>Bedroom</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4 product" routerLink="/sub-categories/seating" routerLinkActive="active">
+          <div class="image-wrapper">
+            <img src="{{seating}}">
+            <div class="info">
+              <p>Seating</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4 product" routerLink="/sub-categories/youth" routerLinkActive="active">
+          <div class="image-wrapper">
+            <img src="{{youth}}">
+            <div class="info">
+              <p>Youth</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  <div class="item" id="page2">
+    <div class="col-xs-4 product" routerLink="/new-arrivals" routerLinkActive="active">
+      <div class="image-wrapper">
+        <img src="{{newArrivals}}">
+        <div class="info">
+          <p>New Arrivals</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-<div class="col-xs-4 product" routerLink="/occasional" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{occasional}}">
-    <div class="info">
-      <p>Occasional</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="/sub-categories/home" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{home}}">
-    <div class="info">
-      <p>Home</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="/sub-categories/bedroom" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{bedroom}}">
-    <div class="info">
-      <p>Bedroom</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="/sub-categories/seating" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{seating}}">
-    <div class="info">
-      <p>Seating</p>
-    </div>
-  </div>
-</div>
-<div class="col-xs-4 product" routerLink="/sub-categories/youth" routerLinkActive="active">
-  <div class="image-wrapper">
-    <img src="{{youth}}">
-    <div class="info">
-      <p>Youth</p>
-    </div>
-  </div>
-</div>
+
+<nav aria-label="Page navigation" class="text-center">
+  <ul class="pagination">
+    <li data-slide="prev" data-target="#category_carousel" (click)="previousPage()">
+      <a><span aria-hidden="true">&laquo;</span></a>
+    </li>
+    <li [class.active]="compare(1)" (click)="setPage(1)" data-target="#category_carousel" data-slide-to="0"><a>1</a></li>
+    <li [class.active]="compare(2)" (click)="setPage(2)" data-target="#category_carousel" data-slide-to="1"><a>2</a></li>
+    <li data-slide="next" data-target="#category_carousel" (click)="nextPage()">
+      <a><span aria-hidden="true">&raquo;</span></a>
+    </li>
+  </ul>
+</nav>
