--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,25 +1,22 @@
 
   <div class="col-xs-5 product-image-wrapper">
-    <img *ngIf="!multipleImages()" src="{{images[0]}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
-    <div *ngIf="multipleImages()" id="carousel-example-generic" class="carousel slide" data-interval="0">
-      <!-- Indicators -->
+    <img src="{{product['thumbnail']}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
+    <!-- <div *ngIf="multipleImages()" id="carousel-example-generic" class="carousel slide" data-interval="0">
       <ol class="carousel-indicators hidden-xs">
           <li [class.active]="active(i)" *ngFor="let image of images; let i = index" data-target="#carousel-example-generic" [attr.data-slide-to]="i"></li>
       </ol>
-      <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div *ngFor="let image of images; let i = index" class="item" [class.active]="active(i)">
             <img class="img-responsive" src="{{image}}" alt="" data-toggle="modal" data-target="#imageModal">
         </div>
       </div>
-      <!-- Controls -->
       <a class="left carousel-control" data-target="#carousel-example-generic" data-slide="prev">
           <span class="icon-prev"></span>
       </a>
       <a class="right carousel-control" data-target="#carousel-example-generic" data-slide="next">
           <span class="icon-next"></span>
       </a>
-    </div>
+    </div> -->
 
     <form id="email-form" class="form-inline">
       <div class="input-field">
